# OpenGL-3112

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/utility/: texture_lerp_userCtrl.fs  texture_simple.fs  texture_simple_noVertColor.vs  texture_vertColor_alpha.fs  texture_vertColor_blend.fs  vertex_color.fs  vertex_color.vs  view_xform_texture.vs
include/: Camera.h  Shader.h
shaders/utility/: xform_simple.vs
src/01_window/: main.cpp
weekly/01_environment_setup/: main.cpp
weekly/02_triangle/: 01_single_triangle.cpp  02_two_triangles_singleVBO.cpp  03_EBO_rectangle_01.cpp  04_EBO_rectangle_01.cpp  05_two_triangles_multiple_shaders.cpp  main.cpp
weekly/03_shaders/: 01_shaders_start.cpp  02_vertex_color_attribute.cpp  03_vertex_color_attribute_uniformTime.cpp  04_vertex_shader_translate_01.cpp  05_shader_class_test.cpp  06_vert_pos_to_color.cpp  07_pulsing_bouncing_example.cpp  08_mouse_position_uniform_test.cpp
weekly/03_shaders/shaders/: 0305_horizontal_bounce.vs  0305_shader.fs  0306_vert_pos_to_color.fs  0306_vert_pos_to_color.vs  0308_mouse_pos_to_color.fs  0308_mouse_pos_to_pos.vs  shader_pulsingRed.fs  shader_simple_Red.fs  shader_vertical_bounce.vs  shader_vertical_translate.vs
weekly/04_transformations/: 01_test (2).cpp  01_test.cpp  01_transform_matrix_01.cpp  02_transform_matrix_02.cpp  03_transform_matrix_03.cpp
weekly/05_textures/: 01_texture_start.cpp  02_texture_vertColor_blend.cpp  03_texture_vertColor_alpha.cpp  04_texture_lerp.cpp  05_texture_lerp_userCtrl.cpp
weekly/06_coordinate_systems/: 01_coordSys_start.cpp  02_coordSys_cube.cpp  03_coordSys_multipleCubes.cpp
weekly/07_cameras/: 01_cameras_orbit.cpp  02_cameras_walkaround.cpp  03_cameras_lookaround.cpp  04_camera_class.cpp  05_fps_spheres.cpp
weekly/08_lighting/: 01_colors_start.cpp  02_basic_lighting.cpp
weekly/08_lighting/shaders/: 02.2_basic_lighting_viewSpace.fs  02.2_basic_lighting_viewSpace.vs  02_basic_lighting.fs  02_basic_lighting.vs
weekly/scratch/: scratch1.cpp
